src/objects/CBL_Commercialization__c.object
<CustomObject>
    <description>Holds the commercialization information for a Coffee Baseline</description>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <referenceTo>CBL_CoffeeBaseline__c</referenceTo>
        <relationshipLabel>CBL_Commercialization</relationshipLabel>
        <relationshipName>CBL_Commercializations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CBL2_Farmer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CBL2_Farmer</label>
        <referenceTo>CBL2_Farmer__c</referenceTo>
        <relationshipLabel>CBL_Commercialization_CBL2_Farmer</relationshipLabel>
        <relationshipName>CBL_Commercialization_CBL2_Farmer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>CBL_Commercialization_Submission</relationshipLabel>
        <relationshipName>CBL_Commercialization_Submission</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bargainingPower__c</fullName>
        <label>bargainingPower</label>
        <picklist>
            <picklistValues>
                <fullName>Bajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>buysCoffee__c</fullName>
        <label>buysCoffee</label>
        <picklist>
            <picklistValues>
                <fullName>Si</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>coffeePlantedAreaNonRegisteredFarmsUnits__c</fullName>
        <label>coffeePlantedAreaNonRegisteredFarmsUnits</label>
        <picklist>
            <picklistValues>
                <fullName>Hectárea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manzana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerda de 25x25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuerda de 40x40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuadra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>coffeePlantedAreaNonRegisteredFarms__c</fullName>
        <label>coffeePlantedAreaNonRegisteredFarms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>enoughInformation__c</fullName>
        <label>enoughInformation</label>
        <picklist>
            <picklistValues>
                <fullName>Precios del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formación del precio del café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tendencia del mercado de café</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuentes de información sobre el mercado</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>farmsNotRegisteredInCoop__c</fullName>
        <label>farmsNotRegisteredInCoop</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lastHarvestPercCoffeeSoldToCoop__c</fullName>
        <label>lastHarvestPercCoffeeSoldToCoop</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>producedCoffeeDestiny__c</fullName>
        <label>producedCoffeeDestiny</label>
        <picklist>
            <picklistValues>
                <fullName>En la organización donde es socio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra Cooperativa o asociación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A un intermediario/prestamista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A un intermediario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Directamente a un expotador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>reasonNotAllCoffeeSoldToCoop__c</fullName>
        <label>reasonNotAllCoffeeSoldToCoop</label>
        <picklist>
            <picklistValues>
                <fullName>No cumple con requerimientos de calidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros compradores tienen mejor precio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros compradores pagan más rápido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Por pago de deudas/anticipos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Areas de café no registradas en la org.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>reasonsNonRegisteredCoopFarms__c</fullName>
        <label>reasonsNonRegisteredCoopFarms</label>
        <picklist>
            <picklistValues>
                <fullName>No cumple con requerimientos de calidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No cumple requisitos de certificación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Café comprometido con otro comprador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distancia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Están registradas en otra organización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otro</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>statusSoldCoffee__c</fullName>
        <label>statusSoldCoffee</label>
        <picklist>
            <picklistValues>
                <fullName>Cereza/Uva/fruta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pergamino oreado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pergamino seco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oro</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <picklist>
            <picklistValues>
                <fullName>Línea Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ex post</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CBL_Commercialization</label>
    <nameField>
        <displayFormat>CM-{0000000}</displayFormat>
        <label>CBL_Commercialization Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CBL_Commercializations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>